# gerbil_connects

./: .gitmodules  README.md
CHOLAN/: README.md
EntQA/: .gitignore  README.md  reader.py  run_reader.py  run_retriever.py
GENRE/: .gitignore  README.md  annotate_GENRE_result.json  model.py  qid_to_wikipedia.py  unobfuscate_benchmarks.py
InsGenEntityLinking/: .gitignore  README.md  universal_train.py
REL/: .bumpversion.cfg  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_OG.md  annotate_REL_result.json  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
REL/.github/workflows/: build.yml  codeql-analysis.yml  docker_publish.yaml  formatting.yml  publish.yml
REL/docs/: CODE_OF_CONDUCT.md  server_api.md
REL/docs/api/: entity_disambiguation.md  generate_train_test.md  mention_detection.md  mulrel_ranker.md  server.md  training_datasets.md  utils.md  vocabulary.md  wikipedia.md  wikipedia_yago_freq.md
REL/docs/tutorials/: conversations.md  custom_models.md  deploy_REL_new_wiki.md  e2e_entity_linking.md  evaluate_gerbil.md  how_to_get_started.md  index.md  reproducing_our_results.md  server.md
REL/gerbil_connect/: entity_linking.py  server_template.py  training_ED_model.py
REL/scripts/: download_data.sh  efficiency_test.py  test_server.py  update_db_pem.py
REL/scripts/code_tutorials/: generate_train_val.py  train_LR.py  train_eval_ED.py
REL/scripts/gerbil_middleware/: pom.xml
REL/src/REL/: entity_disambiguation.py  generate_train_test.py  mention_detection.py  mention_detection_base.py  mulrel_ranker.py  response_handler.py  server.py  training_datasets.py  utils.py  vocabulary.py  wikipedia.py  wikipedia_yago_freq.py
REL/src/REL/crel/: bert_md.py  conv_el.py
REL/src/REL/crel/s2e_pe/: coref_bucket_batch_sampler.py  data.py  modeling.py  pe.py  pe_data.py  utils.py
REL/src/REL/db/: base.py  generic.py
REL/src/REL/ner/: base.py
REL/tests/: test_crel.py
SpEL/: .gitignore  README.md
(+229 files in other folders)
