# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Johannes Michael
author_email = mick.vanhulst@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
description = REL: Radboud Entity Linker
keywords =
    entity-linking
    entity-disambiguation
    wikipedia
    natural-language-processing
long_description = file: README.md
long_description_content_type = text/markdown
name = radboud-el
project_urls =
    Bug Tracker = https://github.com/informagi/REL/issues
    Documentation = https://rel.readthedocs.io
url = https://github.com/informagi/REL
version = 0.1.0


[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src
include_package_data = True
install_requires =
    anyascii
    colorama
    fastapi
    flair>=0.11
    konoha
    nltk
    pydantic
    segtok
    spacy
    torch
    uvicorn

[options.extras_require]
develop =
    # deployment
    bump2version
    # testing
    black
    coverage
    flake8
    isort
    pytest
docs =
    markdown-include
    mkdocs
    mkdocs-material
    mkdocstrings[python]
publishing =
    twine
    wheel
    build

[options.packages.find]
where = src

# [options.entry_points]
# console_scripts =
